# molgan_www

./: LICENSE  README.md  pyproject.toml
molgan_www/: manage.py  requirements.txt
molgan_www/molgan/: apps.py  constants.py  urls.py  utils.py  views.py
molgan_www/molgan/static/molgan/css/: index.css
molgan_www/molgan/templates/molgan/: 404.html  base.html  index.html  predict.html  predict_list.html
molgan_www/molgan_www/: asgi.py  settings.py  urls.py  wsgi.py
molgan_www/static/molgan/css/: index.css
